--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             <div class="img-container"></div>
             <div class="texto">
 
-                <h2>Hp ultima generacion
-                    <span class="color-acento">Ver mas productos</span></h2>
+                <h2>Hp
+                    <span class="color-acento">Hola</span></h2>
                 
             </div>
         </div>
